Update issue templates

--- a/.github/ISSUE_TEMPLATE/기능-구현.md
+++ b/.github/ISSUE_TEMPLATE/기능-구현.md
@@ -7,10 +7,12 @@ assignees: ''
 
 ---
 
-## #️⃣연관된 이슈
+## 기능
 
-> ex) #이슈번호, #이슈번호
+> 기능에 대한 간략한 설명
 
-## 📝작업 내용
+## 작업 상세 내용
 
-> 작업할 내용 설명
+- [ ] TODO
+- [ ] TODO
+- [ ] TODO
