refactor: 예외 처리 리팩토리

--- a/src/main/resources/errors_en.properties
+++ b/src/main/resources/errors_en.properties
@@ -1,7 +1,5 @@
-server.error=internal server error
-invalid.request=Invalid Request
-
-
+SERVER_ERROR=internal server error
+INVALID_REQUEST=Invalid Request
 # 검증
 NotNull={0} value cannot be null
 NotBlank={0} value cannot be empty.
