--- a/src/main/resources/errors_en.properties
+++ b/src/main/resources/errors_en.properties
@@ -4,6 +4,7 @@ INVALID_AUTHORIZATION_CODE=Invalid Authorization Code
 ACCESS_TOKEN_EXPIRED=Access Token Expired
 REFRESH_TOKEN_EXPIRED=Refresh Token Expired
 TOKEN_NOT_MATCHED=Not Matched Access Token And Refresh Token
+GOOGLE_SERVER_ERROR=Error Occurred While Sending Alarm, Check out the device token
 # 검증
 NotNull={0} value cannot be null
 NotBlank={0} value cannot be empty.
